# demo-webapp-kubernetes

./: Dockerfile  README.md  app.py  demo.yaml  docker-compose.yml  pyproject.toml  webapp.yaml
static/css/: style.css
templates/: index.html
